--- a/themes/inhabitent/sass/_footer.scss
+++ b/themes/inhabitent/sass/_footer.scss
@@ -8,7 +8,8 @@
   .site-info {
       font-family: Novecento Sans Web,sans-serif;
       padding: 1.5rem 0;
-      margin-top: 500px;
+      color: white;
+      margin-top: 300px;
       text-align: center;
       text-transform: uppercase;
   }
@@ -16,7 +17,7 @@
       width: 300px;
 }
 .footer-logo{
-  margin-left: 200px;
+  margin-left: 0px;
   margin-top: 70px;
 }
   footer#colophon {
