updated shop page

--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -45,6 +45,7 @@
 }
 
 .content-area{
+	display: flex;
 	width: 800px;
 	margin-left: 70px;
 	padding-top: 80px;
@@ -93,6 +94,22 @@ top: 0;
 
 .read-more-button span {
     color: black;
+}
+
+a.read-button {
+    border: 1px solid #000;
+    color: #000;
+    text-transform: uppercase;
+		width: 125px;
+    height: 40px;
+}
+
+button, input[type=button], input[type=reset], input[type=submit] {
+background-color: #248a83;
+padding: .6rem 1rem .4rem;
+text-shadow: none;
+box-shadow: none;
+border-radius: none;
 }
 /* Comments */
 
