--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -3,25 +3,33 @@
 --------------------------------------------------------------*/
 
 /* Front page */
+
 .hero {
-  display:flex;
-  flex-direction:column;
-  color: white;
-  font-size: 1.25rem;
-  font-weight: lighter;
+  background:
+  linear-gradient( to right,
+    rgba(0,0,0,0.4),rgba(0,0,0,0.4) 100%),
+    url(../../images/home-hero.jpg);
+  background-size: cover;
+  height: 100vh;
+  width: 1280px;
+  display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  background:
-   linear-gradient( to bottom, rgba(0,0,0,0.25) 0%, rgba(0,0,0,0.25) 100% ),
-  url(../../images/inhabitent-logo-full.svg) no-repeat center 60px,
-  url(../../images/home-hero.jpg) repeat-x center;
-  background-size: cover, 10.5rem 27rem;
-  height:25rem;
-  position:relative;
 }
+
+.hero-img {
+  width: 300px;
+  background-size: cover;
+}
+
 h2.inb {
   text-align: center;
+  text-transform: uppercase;
+}
+
+h2.title {
+    margin-left: 550px;
+    text-transform: uppercase;
 }
 .home span {
     display: none;
@@ -33,7 +41,9 @@ h2.inb {
 
 .news-wrapper li{
     width: 400px;
-    padding-right: 30px;
+    // padding-right: 30px;
+    border: 1px solid #d3d3d3;
+    border-bottom: 5px solid #d3d3d3;
 }
 
 ul.news-wrapper {
@@ -52,7 +62,58 @@ ul.news-wrapper {
 .home article#post-21 {
     display: none;
 }
+.shopstuff {
+    display: flex;
+    padding: 0 5%;
 
+.shop-stuff-item:hover {
+    border-top: 5px solid #d99054;
+    }
+
+    .shop-stuff-item {
+        flex-basis: 25%;
+        margin: 10px;
+        padding-bottom: 10px;
+        border: 1px solid lightgray;
+        border-top: 5px solid lightgray;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 22px;
+
+        p {
+            margin: 0 10px;
+            width: 225px;
+            flex-basis: 20%;
+            text-align: center;
+            padding-bottom: 10px;
+        }
+
+        .button-link {
+          text-decoration: none;
+          font-size: 14px;
+          text-transform: uppercase;
+          font-family: novecentosanswide-normal-webfont;
+          color: #fff;
+          -ms-flex-preferred-size: 15%;
+          flex-basis: 15%;
+          overflow: visible;
+          margin-top: 30px;
+        }
+
+        img {
+            height: 90px;
+            width: auto;
+            padding: 10px;
+            flex-basis: 50%;
+        }
+    }
+}
+
+  /* Archive.php */
+.archive .content-area {
+    border-right: none;
+}
   /* About page */
 
   .about-content img {
@@ -76,6 +137,7 @@ ul.news-wrapper {
   padding-top: 10px;
   height: 200px;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
@@ -84,6 +146,13 @@ ul.news-wrapper {
   width: 1120px;
 }
 
+.product-content img {
+    width: auto;
+}
+.product_wrapper article {
+    /* width: 90%; */
+    width: 25%;
+}
 .product_archive_title a {
   text-transform: uppercase;
   text-decoration: none;
@@ -99,11 +168,17 @@ a:hover {
   flex-wrap: wrap;
   justify-content: space-around;
   margin: 0 auto;
+  margin-left: 40px;
 }
 
 .product_sub_catagories {
   width: 10%;
   text-align: center;
+}
+
+.archive .entry-header {
+    border: 1px solid #d3d3d3;
+    width: 90%;
 }
 
 // .product_archive_info {
@@ -124,7 +199,7 @@ a:hover {
 
     border: 1px solid #e1e1e1;
 
-  
+
   }
 
 }
@@ -132,12 +207,16 @@ a:hover {
 .single-content{
     border-right: none;
   }
+
+  .single-content p {
+      width: 500px;
+  }
   .single_product_wrapper {
     border: 1px solid green;
     width: 100%;
     display: flex;
     flex-wrap: nowrap;
-    height: 95vh;
+    height: 85vh;
     justify-content: space-around;
 
       .entry-header {
@@ -146,7 +225,7 @@ a:hover {
           margin-top: 80px;
         }
       }
-      .entry-content{
+      .single-content{
         width: 45%;
         margin-top: 50px;
           .entry-title{
