--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -37,6 +37,7 @@ h2.title {
 
 .home h2.entry-title {
     display: none;
+
   }
 
 .news-wrapper li{
@@ -133,10 +134,9 @@ ul.news-wrapper {
 
 .product_archive_title {
   margin: 0 auto;
-  margin-top: 35px;
   padding-top: 10px;
-  height: 200px;
   display: flex;
+  // height:200px;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
@@ -148,6 +148,8 @@ ul.news-wrapper {
 
 .product-content img {
     width: auto;
+    height: 100%;
+
 }
 .product_wrapper article {
     /* width: 90%; */
@@ -159,6 +161,17 @@ ul.news-wrapper {
   font-weight: lighter;
   font-size: 1.3rem;
 }
+
+h1.page-title.shop-title {
+    text-align: center;
+    margin-top: 60px;
+}
+
+.product-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+  }
 a:hover {
   color: #000;
 }
@@ -169,6 +182,31 @@ a:hover {
   justify-content: space-around;
   margin: 0 auto;
   margin-left: 40px;
+}
+
+.thumbnail-wrapper {
+    height: 200px;
+    overflow: hidden;
+}
+
+
+h2.entry-title {
+    font-size: 1rem;
+    width: 233px;
+    float: left;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+span:after {
+content: "..................................";
+}
+.entry-title p {
+margin-bottom: 1.5rem;
+float: right;
+/* overflow: hidden; */
+width: 70px;
+
 }
 
 .product_sub_catagories {
@@ -198,8 +236,6 @@ a:hover {
   .post_top_wrap {
 
     border: 1px solid #e1e1e1;
-
-
   }
 
 }
@@ -225,6 +261,7 @@ a:hover {
           margin-top: 80px;
         }
       }
+
       .single-content{
         width: 45%;
         margin-top: 50px;
